--- a/1018_node/layer.ipynb
+++ b/1018_node/layer.ipynb
@@ -1231,6 +1231,290 @@
    "id": "85a26cb2f189b531"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 실습하기"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a0c43fa189ad9d63"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Sequential 모델"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "67fbb33e158fb323"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " flatten_3 (Flatten)         (None, 30000)             0         \n",
+      "                                                                 \n",
+      " dense_21 (Dense)            (None, 400)               12000400  \n",
+      "                                                                 \n",
+      " dense_22 (Dense)            (None, 200)               80200     \n",
+      "                                                                 \n",
+      " dense_23 (Dense)            (None, 100)               20100     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 12100700 (46.16 MB)\n",
+      "Trainable params: 12100700 (46.16 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = models.Sequential()\n",
+    "\n",
+    "# (100, 100, 3) 형태의 데이터를 받는 Input 레이어를 쌓으세요.\n",
+    "model.add(layers.Input(shape=(100, 100, 3)))\n",
+    "\n",
+    "# Flatten 레이어를 쌓으세요.\n",
+    "model.add(layers.Flatten())\n",
+    "\n",
+    "# Unit의 수는 400, 활성화함수는 ReLU를 사용하는 Dense 레이어를 쌓으세요.\n",
+    "model.add(layers.Dense(400, activation='relu'))\n",
+    "\n",
+    "# Unit의 수는 200, 활성화함수는 ReLU를 사용하는 Dense 레이어를 쌓으세요.\n",
+    "model.add(layers.Dense(200, activation='relu'))\n",
+    "\n",
+    "# Unit의 수는 100, 활성화함수는 Softmax를 사용하는 Dense 레이어를 쌓으세요.\n",
+    "model.add(layers.Dense(100, activation='softmax'))\n",
+    "\n",
+    "model.summary()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-18T13:22:05.941096100Z",
+     "start_time": "2023-10-18T13:22:05.866059400Z"
+    }
+   },
+   "id": "d0826ad889cc3ec6"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Functional API 모델"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "37d546f25a4311b9"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_6\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_10 (InputLayer)       [(None, 100, 100, 3)]     0         \n",
+      "                                                                 \n",
+      " flatten_4 (Flatten)         (None, 30000)             0         \n",
+      "                                                                 \n",
+      " dense_24 (Dense)            (None, 400)               12000400  \n",
+      "                                                                 \n",
+      " dense_25 (Dense)            (None, 200)               80200     \n",
+      "                                                                 \n",
+      " dense_26 (Dense)            (None, 100)               20100     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 12100700 (46.16 MB)\n",
+      "Trainable params: 12100700 (46.16 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (100, 100, 3) 형태의 데이터를 받는 Input 레이어를 쌓으세요\n",
+    "inputs = layers.Input(shape=(100, 100, 3))\n",
+    "\n",
+    "# Flatten 레이어를 쌓으세요.\n",
+    "x = layers.Flatten(input_shape=(100, 100, 3))(inputs)\n",
+    "\n",
+    "# Unit의 수는 400, 활성화함수는 ReLU를 사용하는 Dense 레이어를 쌓으세요.\n",
+    "x = layers.Dense(400, activation=\"relu\")(x)\n",
+    "\n",
+    "# Unit의 수는 200, 활성화함수는 ReLU를 사용하는 Dense 레이어를 쌓으세요.\n",
+    "x = layers.Dense(200, activation=\"relu\")(x)\n",
+    "\n",
+    "# Unit의 수는 100, 활성화함수는 Softmax를 사용하는 Dense 레이어를 쌓으세요.\n",
+    "x = layers.Dense(100, activation=\"softmax\")(x)\n",
+    "\n",
+    "model = models.Model(inputs = inputs, outputs = x)\n",
+    "model.summary()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-18T13:25:28.067114800Z",
+     "start_time": "2023-10-18T13:25:28.001946900Z"
+    }
+   },
+   "id": "4f1c7e062893d134"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Subclassing API 모델"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "272ff5e623422a31"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"your_model\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " flatten_5 (Flatten)         multiple                  0         \n",
+      "                                                                 \n",
+      " dense_27 (Dense)            multiple                  12000400  \n",
+      "                                                                 \n",
+      " dense_28 (Dense)            multiple                  80200     \n",
+      "                                                                 \n",
+      " dense_29 (Dense)            multiple                  20100     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 12100700 (46.16 MB)\n",
+      "Trainable params: 12100700 (46.16 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "class YourModel(models.Model):\n",
+    "  def __init__(self, **kwargs):\n",
+    "    super(YourModel, self).__init__(**kwargs)\n",
+    "    # Flatten 레이어를 쌓으세요.\n",
+    "    self.flat_layer = layers.Flatten()\n",
+    "    # Unit의 수는 400, 활성화함수는 ReLU를 사용하는 Dense 레이어를 쌓으세요.\n",
+    "    self.dense_layer1 = layers.Dense(400, activation='relu')\n",
+    "    # Unit의 수는 200, 활성화함수는 ReLU를 사용하는 Dense 레이어를 쌓으세요.\n",
+    "    self.dense_layer2 = layers.Dense(200, activation='relu')\n",
+    "    # Unit의 수는 100, 활성화함수는 Softmax를 사용하는 Dense 레이어를 쌓으세요.\n",
+    "    self.output_layer = layers.Dense(100, activation='softmax')\n",
+    "\n",
+    "  def call(self, inputs):\n",
+    "    # Flatten 레이어를 통과한 뒤 Dense 레이어를 400 -> 200 -> 100 순으로 통과하도록 쌓으세요.\n",
+    "    x = self.flat_layer(inputs)\n",
+    "    x = self.dense_layer1(x)\n",
+    "    x = self.dense_layer2(x)\n",
+    "    x = self.output_layer(x)\n",
+    "    return x\n",
+    "\n",
+    "# (100, 100, 3) 형태를 가진 임의의 텐서를 생성해줍니다.\n",
+    "# data = tf.random.normal([100, 100, 3])\n",
+    "# # 데이터는 일반적으로 batch 단위로 들어가기 때문에 batch 차원을 추가해주겠습니다.\n",
+    "# data = tf.reshape((-1, 100, 100, 3))\n",
+    "data = tf.random.normal([1, 100, 100, 3])\n",
+    "model = YourModel()\n",
+    "model(data)\n",
+    "\n",
+    "model.summary()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-18T13:34:04.308226Z",
+     "start_time": "2023-10-18T13:34:04.246082700Z"
+    }
+   },
+   "id": "13457da08fb2b724"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_7\"\n",
+      "__________________________________________________________________________________________________\n",
+      " Layer (type)                Output Shape                 Param #   Connected to                  \n",
+      "==================================================================================================\n",
+      " input_1 (InputLayer)        [(None, 40)]                 0         []                            \n",
+      "                                                                                                  \n",
+      " input_2 (InputLayer)        [(None, 10)]                 0         []                            \n",
+      "                                                                                                  \n",
+      " dense (Dense)               (None, 100)                  4100      ['input_1[0][0]']             \n",
+      "                                                                                                  \n",
+      " dense_1 (Dense)             (None, 100)                  1100      ['input_2[0][0]']             \n",
+      "                                                                                                  \n",
+      " concatenate_4 (Concatenate  (None, 200)                  0         ['dense[0][0]',               \n",
+      " )                                                                   'dense_1[0][0]']             \n",
+      "                                                                                                  \n",
+      " dense_3 (Dense)             (None, 40)                   8040      ['concatenate_4[0][0]']       \n",
+      "                                                                                                  \n",
+      " dense_4 (Dense)             (None, 10)                   410       ['dense_3[0][0]']             \n",
+      "                                                                                                  \n",
+      " dense_2 (Dense)             (None, 1)                    201       ['concatenate_4[0][0]']       \n",
+      "                                                                                                  \n",
+      "==================================================================================================\n",
+      "Total params: 13851 (54.11 KB)\n",
+      "Trainable params: 13851 (54.11 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Functional API 방식 혹은 Subclassing API 방식으로 구현해주세요.\n",
+    "\n",
+    "input_1 = keras.Input(shape=(40), name='input_1')\n",
+    "input_2 = keras.Input(shape=(10), name='input_2')\n",
+    "hidden1 = layers.Dense(100, activation='relu', name='dense')(input_1)\n",
+    "hidden2 = layers.Dense(100, activation='relu', name='dense_1')(input_2)\n",
+    "concat = layers.Concatenate()([hidden1, hidden2])\n",
+    "hidden3 = layers.Dense(40, activation='relu', name='dense_3')(concat)\n",
+    "sub_out = layers.Dense(1, name='dense_2')(concat)\n",
+    "out_put = layers.Dense(10, activation='softmax', name='dense_4')(hidden3)\n",
+    "\n",
+    "model = models.Model(inputs=[input_1, input_2], outputs=[out_put, sub_out])\n",
+    "model.summary()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-18T13:48:45.504014Z",
+     "start_time": "2023-10-18T13:48:45.435224Z"
+    }
+   },
+   "id": "d8e492376efb12fa"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -1238,7 +1522,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "d0826ad889cc3ec6"
+   "id": "dd426d14def3b0f7"
   }
  ],
  "metadata": {
