--- a/1030_node/1030_projject.ipynb
+++ b/1030_node/1030_projject.ipynb
@@ -55,13 +55,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "# 문제 1-2. hyperparameter 설정\n",
+    "batch_size = 16\n",
+    "epochs = 5\n",
+    "IMG_HEIGHT = 256\n",
+    "IMG_WIDTH = 256"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-29T18:25:13.884982200Z",
+     "start_time": "2023-10-29T18:25:13.876237100Z"
+    }
+   },
+   "id": "de101705cab66818"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ImageDataGenerator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[3], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# 문제 1-2. 데이터 generator 생성\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;66;03m# Training data generator\u001B[39;00m\n\u001B[1;32m----> 3\u001B[0m image_gen_train \u001B[38;5;241m=\u001B[39m \u001B[43mImageDataGenerator\u001B[49m(rescale\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1.\u001B[39m\u001B[38;5;241m/\u001B[39m\u001B[38;5;241m255\u001B[39m,\n\u001B[0;32m      4\u001B[0m                                      rotation_range\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.3\u001B[39m,\n\u001B[0;32m      5\u001B[0m                                      width_shift_range\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.1\u001B[39m,\n\u001B[0;32m      6\u001B[0m                                      height_shift_range\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.1\u001B[39m,\n\u001B[0;32m      7\u001B[0m                                      zoom_range\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.2\u001B[39m,\n\u001B[0;32m      8\u001B[0m                                      horizontal_flip\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, \n\u001B[0;32m      9\u001B[0m                                      vertical_flip\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[0;32m     11\u001B[0m train_data_gen \u001B[38;5;241m=\u001B[39m image_gen_train\u001B[38;5;241m.\u001B[39mflow_from_directory(batch_size\u001B[38;5;241m=\u001B[39mbatch_size,\n\u001B[0;32m     12\u001B[0m                                                      directory\u001B[38;5;241m=\u001B[39mtrain_dir,\n\u001B[0;32m     13\u001B[0m                                                      shuffle\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m,\n\u001B[0;32m     14\u001B[0m                                                      target_size\u001B[38;5;241m=\u001B[39m(IMG_HEIGHT, IMG_WIDTH),\n\u001B[0;32m     15\u001B[0m                                                      class_mode\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mbinary\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m     17\u001B[0m image_gen_val \u001B[38;5;241m=\u001B[39m ImageDataGenerator(rescale\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1.\u001B[39m\u001B[38;5;241m/\u001B[39m\u001B[38;5;241m255\u001B[39m)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'ImageDataGenerator' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1-2. 데이터 generator 생성\n",
+    "# Training data generator\n",
+    "image_gen_train = ImageDataGenerator(rescale=1./255,\n",
+    "                                     rotation_range=0.3,\n",
+    "                                     width_shift_range=0.1,\n",
+    "                                     height_shift_range=0.1,\n",
+    "                                     zoom_range=0.2,\n",
+    "                                     horizontal_flip=True, \n",
+    "                                     vertical_flip=False)\n",
+    "\n",
+    "train_data_gen = image_gen_train.flow_from_directory(batch_size=batch_size,\n",
+    "                                                     directory=train_dir,\n",
+    "                                                     shuffle=True,\n",
+    "                                                     target_size=(IMG_HEIGHT, IMG_WIDTH),\n",
+    "                                                     class_mode='binary')\n",
+    "\n",
+    "image_gen_val = ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "val_data_gen = image_gen_val.flow_from_directory(batch_size=batch_size,\n",
+    "                                                 directory=validation_dir,\n",
+    "                                                 target_size=(IMG_HEIGHT, IMG_WIDTH),\n",
+    "                                                 class_mode='binary')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-29T18:25:17.987085200Z",
+     "start_time": "2023-10-29T18:25:17.956563400Z"
+    }
+   },
+   "id": "95f2ea70c222d2f7"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "de101705cab66818"
+   "id": "60c979ffb568c102"
   }
  ],
  "metadata": {
