--- a/1030_node/1030_projject.ipynb
+++ b/1030_node/1030_projject.ipynb
@@ -25,7 +25,7 @@
     }
    ],
    "source": [
-    "# 문제1-1. 이미지에 나온 VGG16 모델을 구현하세요.  \n",
+    " # 문제1-1. 이미지에 나온 VGG16 모델을 구현하세요.  \n",
     "input_layer=tf.keras.layers.Input(shape=(256, 256, 3))\n",
     "x = tf.keras.layers.Conv2D(filters=64, kernel_size=(3,3),padding=\"same\", activation=\"relu\")(input_layer)\n",
     "x = tf.keras.layers.Conv2D(filters=64, kernel_size=(3,3),padding=\"same\", activation=\"relu\")(x)\n",
@@ -45,9 +45,11 @@
     "x = tf.keras.layers.Conv2D(filters=512, kernel_size=(3,3),padding=\"same\", activation=\"relu\")(x)\n",
     "x = tf.keras.layers.Conv2D(filters=512, kernel_size=(3,3),padding=\"same\", activation=\"relu\")(x)\n",
     "x = tf.keras.layers.MaxPool2D((2, 2))(x)\n",
+    "x = tf.keras.layers.Flatten()(x)\n",
     "x = tf.keras.layers.Dense(4096, activation='relu')(x)\n",
     "x = tf.keras.layers.Dense(4096, activation='relu')(x)\n",
-    "out_layer = tf.keras.layers.Dense(1000, activation='softmax')(x)\n",
+    "x = tf.keras.layers.Dense(1000, activation='relu')(x)\n",
+    "out_layer=tf.keras.layers.Dense(1, activation='softmax')(x)\n",
     "\n",
     "model = tf.keras.Model(inputs=[input_layer], outputs=[out_layer])\n",
     "model.summary()"
